[gd_scene load_steps=6 format=3 uid="uid://ci4h23rvdej3t"]

[ext_resource type="Script" path="res://scenes/AdvancedOptions.gd" id="1_jbv3n"]
[ext_resource type="Texture2D" uid="uid://ci2mpewrmv3rv" path="res://assets/gui/close_button.png" id="2_5yjsg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_skh3p"]
atlas = ExtResource("2_5yjsg")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrwi1"]
atlas = ExtResource("2_5yjsg")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0v0vr"]
atlas = ExtResource("2_5yjsg")
region = Rect2(32, 0, 32, 32)

[node name="AdvancedOptions" type="HBoxContainer"]
script = ExtResource("1_jbv3n")

[node name="TranslationLabel" type="Label" parent="."]
layout_mode = 2
size_flags_vertical = 1
text = "Verschiebung"
horizontal_alignment = 2

[node name="TranslationBox" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="TranslationX" type="SpinBox" parent="TranslationBox"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -1.0
max_value = 2.0
step = 0.001
page = 0.1

[node name="TranslationY" type="SpinBox" parent="TranslationBox"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -1.0
max_value = 2.0
step = 0.001
page = 0.1

[node name="ContractionLabel" type="Label" parent="."]
layout_mode = 2
size_flags_vertical = 1
text = "Kontraktion"
horizontal_alignment = 2

[node name="ContractionBox" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ContractionX" type="SpinBox" parent="ContractionBox"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.001
page = 0.1

[node name="ContractionY" type="SpinBox" parent="ContractionBox"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.001
page = 0.1

[node name="RotationBox" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Rotation" type="SpinBox" parent="RotationBox"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 360.0
page = 1.0
suffix = "Â°"

[node name="RotationLabel" type="Label" parent="RotationBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rotation"
horizontal_alignment = 2

[node name="MirrorBox" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Mirror" type="CheckButton" parent="MirrorBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MirrorLabel" type="Label" parent="MirrorBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "gespiegelt"
horizontal_alignment = 2

[node name="MatrixButton" type="Button" parent="."]
layout_mode = 2
text = "Zur Matrixansicht"
alignment = 2

[node name="CloseButton" type="TextureButton" parent="."]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_skh3p")
texture_pressed = SubResource("AtlasTexture_yrwi1")
texture_hover = SubResource("AtlasTexture_0v0vr")

[connection signal="pressed" from="MatrixButton" to="." method="_on_matrix_button_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
